Retained hover functionality

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Lesson Template</title>
+    <!-- fonts -->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+
+    <!-- style -->
+    <link rel="stylesheet" href="src/Style.css" type="text/css">
     <script src="build/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    
   </head>
   <body>
     <div id="content"></div>
